css/style.css
body {
	margin: 0;
	padding: 0;
}

.nav-bar {
	width:  100%;
	height:  auto;
	background: #364F6B;
}

h1, h2, h3, h4 {
	font-family: Calibri;
}

h1 {
	margin: 0;
	padding: 0;
	color: #fff;
	text-align: center;
}

h2 {
	font-family:  'Font Name', Calibri;
	font-size: 2em;
	margin: 0;
}

.recipe-cat {
	border-bottom:  4px solid #364F6B;
	float:  left;
	margin: 5em 0 0 5em;
	width: 90%;
}

.cards {
	float:  left;
	width:  11%;
	margin: 3em 0 0 5em;
	border:  1px solid grey;
}

.cards a {
	text-decoration: none;
	color: #000;
}

.cards h4 {
	text-align: center;
	border-bottom:  1px solid grey;
	margin: 0;
	padding: 7px;
	background: #9FB1BCFF;
	text-decoration: none;
}

.cards img { 
	width:  204px;
	height: 200px;
}

.cards p {
	font-family: Calibri;
	margin: 0;
	padding: 1em;
}

.recipe-layout img {
	margin-left: auto;
	margin-right: auto;
	display: block;
	margin-top: 10em;
}

.desc {
	margin: 0 auto;
	width:  50%;
	border: 1px solid black;
	text-align: center;
	padding: 1em;
}

ul,ol li {
	font-family: Calibri;
	align-text: left;
}

